# HealthCareApp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
src/core/: AIHealthAssistant.cpp  AIHealthAssistant.h  AuthManager.cpp  AuthManager.h  EmergencyManager.cpp  EmergencyManager.h  Medication.cpp  Medication.h  ReminderManager.cpp  ReminderManager.h  User.cpp  User.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/gui/: AIChatWindow.cpp  AIChatWindow.h  DashboardWindow.cpp  DashboardWindow.h  EmergencyWindow.cpp  EmergencyWindow.h  LoginWindow.cpp  LoginWindow.h  MedicationForm.cpp  MedicationForm.h
src/network/: INetworkClient.h  JsonMessage.cpp  JsonMessage.h  NetworkClient.cpp  NetworkClient.h  NetworkServer.cpp  NetworkServer.h
src/utils/: Validator.cpp  Validator.h
tests/: test_ai_mock.cpp  test_emergency.cpp  test_login.cpp  test_medication.cpp  test_network_mock.cpp  test_reminder.cpp  test_validation.cpp
